syntax = "proto3";

package Loadbalancer;

option java_package = "dev.remine.guilder.rpc.loadbalancer";

import "types/services.proto";

//This service is the handshake, this will be the first request made by a Client (Spigot/Proxy)
//It will provide useful information, for example: it will provide the IP's, ports and tokens of all the services to a Client.
service Handshake
{
  rpc HandshakeClient (HandshakeRequest) returns (ClientHandshakeReply) {}
}

//This message provides the information the client may need to connect to a needed service.
//For example: it will provide a service Type PLAYERS with the IP 127.0.0.1 and the Port 50014,
//so when a Spigot server tries to retrieve information of a player it will be able to make a connection to that
//service.
message ClientService
{

  Types.Services ServiceType = 1;
  string Ip = 2;
  int32 Port = 3;
}

message HandshakeRequest
{
  //Server Id so we know what services we have to send.
  string Id = 1;
}

message ClientHandshakeReply
{
  //A list of the services needed by the client for setup.
  repeated ClientService services = 3;
}